--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -34,6 +34,7 @@ jobs:
           echo "tiktok=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list" >> $GITHUB_ENV
           echo "bilibili=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list" >> $GITHUB_ENV
           echo "openai=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list" >> $GITHUB_ENV
+          echo "telegram=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list" >> $GITHUB_ENV
           echo "proxy=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list" >> $GITHUB_ENV
           echo "cn=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list" >> $GITHUB_ENV
         shell: bash
@@ -48,7 +49,7 @@ jobs:
           tag_name: latest
           github_token: ${{ secrets.GITHUB_TOKEN }}
           delete_release: true
-          repo: DustinWin/clash-geosite
+          repo: Misaka009982/clash-geosite
 
       - name: Checkout v2fly/domain-list-community
         uses: actions/checkout@v3
@@ -93,6 +94,10 @@ jobs:
       - name: Generate apple-cn
         run: |
           curl -sSL ${apple_cn} | perl -ne '/^server=\/([^\/]+)\// && print "$1\n"' | sed '/^\s*$/d' > ./community/mydata/apple-cn
+
+      - name: Generate telegram
+        run: |
+          curl -sSL ${openai} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/telegram
 
       - name: Generate google-cn
         run: |
@@ -173,8 +178,8 @@ jobs:
 
       - name: Get geoip.dat relative files
         run: |
-          wget https://github.com/DustinWin/clash-geoip/releases/download/latest/geoip.dat
-          wget https://github.com/DustinWin/clash-geoip/releases/download/latest/geoip-lite.dat
+          wget https://github.com/Misaka009982/clash-geoip/releases/download/latest/geoip.dat
+          wget https://github.com/Misaka009982/clash-geoip/releases/download/latest/geoip-lite.dat
 
       - name: Generate fake-ip-user.yaml
         env:
@@ -188,9 +193,9 @@ jobs:
 
           geodata-mode: true
           geox-url:
-            geosite: "https://fastly.jsdelivr.net/gh/DustinWin/clash-geosite@release/geosite-lite.dat"
-            geoip: "https://fastly.jsdelivr.net/gh/DustinWin/clash-geosite@release/geoip-lite.dat"
-            mmdb: "https://fastly.jsdelivr.net/gh/DustinWin/clash-geosite@release/Country-lite.mmdb"
+            geosite: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/geosite-lite.dat"
+            geoip: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/geoip-lite.dat"
+            mmdb: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/Country-lite.mmdb"
 
           dns:
             enable: true
@@ -225,9 +230,9 @@ jobs:
 
           geodata-mode: true
           geox-url:
-            geosite: "https://fastly.jsdelivr.net/gh/DustinWin/clash-geosite@release/geosite-lite.dat"
-            geoip: "https://fastly.jsdelivr.net/gh/DustinWin/clash-geosite@release/geoip-lite.dat"
-            mmdb: "https://fastly.jsdelivr.net/gh/DustinWin/clash-geosite@release/Country-lite.mmdb"
+            geosite: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/geosite-lite.dat"
+            geoip: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/geoip-lite.dat"
+            mmdb: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/Country-lite.mmdb"
 
           dns:
             enable: true
@@ -255,8 +260,8 @@ jobs:
 
       - name: Move files
         run: |
-          wget -P ./publish https://github.com/DustinWin/clash-geoip/releases/download/latest/Country.mmdb
-          wget -P ./publish https://github.com/DustinWin/clash-geoip/releases/download/latest/Country-lite.mmdb
+          wget -P ./publish https://github.com/Misaka009982/clash-geoip/releases/download/latest/Country.mmdb
+          wget -P ./publish https://github.com/Misaka009982/clash-geoip/releases/download/latest/Country-lite.mmdb
           install -Dp ./geoip.dat ./publish
           install -Dp ./geoip-lite.dat ./publish
           install -Dp ./community/geosite-all.dat ./publish
