--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: Build geosite
+name: Build GeoSite
 on:
   workflow_dispatch:
   schedule:
@@ -18,8 +18,8 @@ jobs:
         run: |
           echo "RELEASE_NAME=Released on $(date +%Y%m%d%H%M)" >> $GITHUB_ENV
           echo "ads=https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt" >> $GITHUB_ENV
-          echo "lan=https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/private" >> $GITHUB_ENV
-          echo "networktest=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.list" >> $GITHUB_ENV
+          echo "private1=https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/private" >> $GITHUB_ENV
+          echo "private2=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list" >> $GITHUB_ENV
           echo "microsoft_cn=https://rules.kr328.app/microsoft@cn.yaml" >> $GITHUB_ENV
           echo "apple_cn=https://raw.githubusercontent.com/felixonmars/dnsmasq-china-list/master/apple.china.conf" >> $GITHUB_ENV
           echo "google_cn=https://raw.githubusercontent.com/felixonmars/dnsmasq-china-list/master/google.china.conf" >> $GITHUB_ENV
@@ -34,17 +34,19 @@ jobs:
           echo "tiktok=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list" >> $GITHUB_ENV
           echo "bilibili=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list" >> $GITHUB_ENV
           echo "openai=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list" >> $GITHUB_ENV
+          echo "networktest=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.list" >> $GITHUB_ENV
           echo "telegram=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list" >> $GITHUB_ENV
           echo "proxy=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list" >> $GITHUB_ENV
           echo "cn=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list" >> $GITHUB_ENV
         shell: bash
 
       - name: Checkout codebase
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - uses: dev-drprasad/delete-tag-and-release@v1.0
+      - name: Delete current tag and release
+        uses: dev-drprasad/delete-tag-and-release@v1.0
         with:
           tag_name: latest
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -52,13 +54,13 @@ jobs:
           repo: Misaka009982/clash-geosite
 
       - name: Checkout v2fly/domain-list-community
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: v2fly/domain-list-community
           path: community
 
       - name: Checkout cokebar/gfwlist2dnsmasq
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: cokebar/gfwlist2dnsmasq
           path: gfwlist2dnsmasq
@@ -73,19 +75,18 @@ jobs:
           mkdir -p ./community/mydata ./tmp ./publish
           curl -sSL ${ads} | grep -v '#' | sed '/^\s*$/d' > ./community/mydata/ads
 
-      - name: Generate lan
+      - name: Generate private
         run: |
-          curl -sSL ${lan} | grep -v '#' | sed '/^\s*$/d' > ./community/mydata/lan
-
-      - name: Generate networktest
-        run: |
-          curl -sSL ${networktest} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/networktest
-          cat <<EOF >> ./community/mydata/networktest
-          keyword:test-ipv6
-          keyword:testipv6
-          keyword:ipv6-test
-          keyword:ipv6test
+          cat <<EOF > ./tmp/temp-private.txt
+          full:clash.razord.top
+          full:clash.metacubex.one
+          full:yacd.haishan.me
+          full:yacd.metacubex.one
+          full:d.metacubex.one
           EOF
+          curl -sSL ${private1} | grep -v '#' | sed '/^\s*$/d' >> ./tmp/temp-private.txt
+          curl -sSL ${private2} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' >> ./tmp/temp-private.txt
+          sort --ignore-case -u ./tmp/temp-private.txt > ./community/mydata/private
           
       - name: Generate microsoft-cn
         run: |
@@ -93,108 +94,135 @@ jobs:
 
       - name: Generate apple-cn
         run: |
-          curl -sSL ${apple_cn} | perl -ne '/^server=\/([^\/]+)\// && print "$1\n"' | sed '/^\s*$/d' > ./community/mydata/apple-cn
-
-      - name: Generate telegram
-        run: |
-          curl -sSL ${openai} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/telegram
+          curl -sSL ${apple_cn} | perl -ne '/^server=\/([^\/]+)\// && print "full:$1\n"' | sed '/^\s*$/d' > ./community/mydata/apple-cn
 
       - name: Generate google-cn
         run: |
-          curl -sSL ${google_cn} | perl -ne '/^server=\/([^\/]+)\// && print "$1\n"' | sed '/^\s*$/d' > ./community/mydata/google-cn
+          curl -sSL ${google_cn} | perl -ne '/^server=\/([^\/]+)\// && print "full:$1\n"' | sed '/^\s*$/d' > ./community/mydata/google-cn
 
       - name: Generate games-cn
         run: |
           curl -sSL ${games_cn1} | grep -Ev '#|payload:' | sed 's/^- "+.//g' | sed 's/^- "/full:/g' | sed 's/"$//g' | sed '/^\s*$/d' > ./tmp/temp-games-cn.txt
-          curl -sSL ${games_cn2} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' >> ./tmp/temp-games-cn.txt
+          curl -sSL ${games_cn2} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' >> ./tmp/temp-games-cn.txt
           sort --ignore-case -u ./tmp/temp-games-cn.txt > ./community/mydata/games-cn
 
       - name: Generate netflix
         run: |
-          curl -sSL ${netflix} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/netflix
+          curl -sSL ${netflix} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/netflix
 
       - name: Generate disney
         run: |
-          curl -sSL ${disney} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/disney
+          curl -sSL ${disney} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/disney
 
       - name: Generate max
         run: |
-          curl -sSL ${max} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/max
+          curl -sSL ${max} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/max
 
       - name: Generate primevideo
         run: |
-          curl -sSL ${primevideo} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/primevideo
+          curl -sSL ${primevideo} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/primevideo
 
       - name: Generate appletv
         run: |
-          curl -sSL ${appletv} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/appletv
+          curl -sSL ${appletv} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/appletv
 
       - name: Generate youtube
         run: |
-          curl -sSL ${youtube} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/youtube
+          curl -sSL ${youtube} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/youtube
+
+      - name: Generate tiktok
+        run: |
+          curl -sSL ${tiktok} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/tiktok
 
       - name: Generate bilibili
         run: |
-          curl -sSL ${bilibili} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/bilibili
+          curl -sSL ${bilibili} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/bilibili
 
       - name: Generate openai
         run: |
-          curl -sSL ${openai} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/openai
+          curl -sSL ${openai} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/openai
+
+      - name: Generate networktest
+        run: |
+          curl -sSL ${networktest} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/networktest
+          cat <<EOF >> ./community/mydata/networktest
+          keyword:ipv6-test
+          keyword:ipv6test
+          keyword:test-ipv6
+          keyword:testipv6
+          EOF
+
+      - name: Generate telegram
+        run: |
+          curl -sSL ${openai} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/telegram
 
       - name: Generate proxy
         run: |
           cd gfwlist2dnsmasq || exit 1
           chmod +x ./gfwlist2dnsmasq.sh
           ./gfwlist2dnsmasq.sh -l -o ../tmp/temp-proxy.txt
-          curl -sSL ${proxy} | grep 'DOMAIN' | grep -v '#' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' >> ../tmp/temp-proxy.txt
+          curl -sSL ${proxy} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' >> ../tmp/temp-proxy.txt
           sort --ignore-case -u ../tmp/temp-proxy.txt > ../community/mydata/proxy
 
       - name: Generate cn
         run: |
-          curl -sSL ${cn} | grep 'DOMAIN' | grep -Ev '#|google' | sed 's/DOMAIN-SUFFIX,//g' | sed 's/DOMAIN-KEYWORD,/keyword:/g' | sed 's/DOMAIN,/full:/g' | sed '/^\s*$/d' > ./community/mydata/cn
+          curl -sSL ${cn} | grep -Ev '#|google' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/cn
 
-      - name: Generate geosite-all.dat
+      - name: Generate GeoSite-all.dat
         run: |
           cd ./community
-          go run ./ --datapath=./mydata --outputname geosite-all.dat
+          go run ./ --datapath=./mydata --outputname GeoSite-all.dat
 
-      - name: Generate geosite-all-lite.dat
+      - name: Generate GeoSite-all-lite.dat
         run: |
           rm -f ./community/mydata/ads
           cd ./community
-          go run ./ --datapath=./mydata --outputname geosite-all-lite.dat
+          go run ./ --datapath=./mydata --outputname GeoSite-all-lite.dat
 
-      - name: Generate geosite.dat
+      - name: Generate GeoSite.dat
         run: |
           curl -sSL ${ads} | grep -v '#' | sed '/^\s*$/d' > ./community/mydata/ads
+          rm -f ./community/mydata/netflix \
+                ./community/mydata/disney \
+                ./community/mydata/max \
+                ./community/mydata/primevideo \
+                ./community/mydata/appletv \
+                ./community/mydata/youtube \
+                ./community/mydata/tiktok \
+                ./community/mydata/bilibili \
+                ./community/mydata/openai 
           cd ./community
-          go run ./ --datapath=./mydata --outputname geosite.dat
+          go run ./ --datapath=./mydata --outputname GeoSite.dat
 
-      - name: Generate geosite-lite.dat
+      - name: Generate GeoSite-lite.dat
         run: |
           rm -f ./community/mydata/ads
           cd ./community
-          go run ./ --datapath=./mydata --outputname geosite-lite.dat
+          go run ./ --datapath=./mydata --outputname GeoSite-lite.dat
 
-      - name: Get Geoip.dat relative files
+      - name: Get GeoIP.dat relative files
         run: |
-          wget https://github.com/Misaka009982/clash-Geoip/releases/download/latest/Geoip.dat
-          wget https://github.com/Misaka009982/clash-Geoip/releases/download/latest/Geoip-lite.dat
+          wget https://github.com/Misaka009982/clash-geoip/releases/download/latest/GeoIP.dat
+          wget https://github.com/Misaka009982/clash-geoip/releases/download/latest/GeoIP-lite.dat
 
       - name: Generate fake-ip-user.yaml
         env:
           SED: sed 's/^/    - /g' | sed '/^\s*$/d'
         run: |
           cat <<EOF > ./publish/fake-ip-user.yaml
+          mode: rule
+          log-level: silent
+          allow-lan: true
           unified-delay: false
           tcp-concurrent: true
+          external-controller-tls: 0.0.0.0:9090
           global-client-fingerprint: chrome
           profile: {store-selected: true, store-fake-ip: true}
 
           geodata-mode: true
           geox-url:
-            geosite: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/geosite-lite.dat"
-            geoip: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/Geoip-lite.dat"
+            geosite: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/GeoSite-lite.dat"
+            geoip: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/GeoIP-lite.dat"
             mmdb: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/Country-lite.mmdb"
 
           dns:
@@ -208,7 +236,7 @@ jobs:
             fake-ip-filter:
           EOF
           curl -sSL https://raw.githubusercontent.com/juewuy/ShellClash/master/public/fake_ip_filter.list | grep -v '#' | sed "s/.*/'&'/g" | ${{ env.SED }} >> ./publish/fake-ip-user.yaml
-          curl -sSL https://raw.githubusercontent.com/XIU2/TrackersListCollection/master/all.txt | grep -i '\.[A-Z]' | sed "s/^.*\/\//'/g" | sed "s/:.*\/.*/'/g" | ${{ env.SED }} >> ./publish/fake-ip-user.yaml
+          curl -sSL https://raw.githubusercontent.com/XIU2/TrackersListCollection/master/all.txt | grep 'udp:' | grep -i '\.[A-Z]' | sed "s/^.*\/\//'/g" | sed "s/:.*\/.*/'/g" | ${{ env.SED }} >> ./publish/fake-ip-user.yaml
           cat <<EOF >> ./publish/fake-ip-user.yaml
               - 'adguardteam.github.io'
               - 'anti-ad.net'
@@ -223,15 +251,19 @@ jobs:
       - name: Generate redir-host-user.yaml
         run: |
           cat <<EOF > ./publish/redir-host-user.yaml
+          mode: rule
+          log-level: silent
+          allow-lan: true
           unified-delay: false
           tcp-concurrent: true
+          external-controller-tls: 0.0.0.0:9090
           global-client-fingerprint: chrome
           profile: {store-selected: true, store-fake-ip: true}
 
           geodata-mode: true
           geox-url:
-            geosite: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/geosite-lite.dat"
-            geoip: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/Geoip-lite.dat"
+            geosite: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/GeoSite-lite.dat"
+            geoip: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/GeoIP-lite.dat"
             mmdb: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/Country-lite.mmdb"
 
           dns:
@@ -254,20 +286,20 @@ jobs:
               - https://doh.pub/dns-query
             nameserver-policy:
               'geosite:microsoft-cn,apple-cn,google-cn,games-cn': [https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
-              'geosite:cn,lan': [https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
+              'geosite:cn,private': [https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
           EOF
           rm -rf ./tmp
 
       - name: Move files
         run: |
-          wget -P ./publish https://github.com/Misaka009982/clash-Geoip/releases/download/latest/Country.mmdb
-          wget -P ./publish https://github.com/Misaka009982/clash-Geoip/releases/download/latest/Country-lite.mmdb
-          install -Dp ./Geoip.dat ./publish
-          install -Dp ./Geoip-lite.dat ./publish
-          install -Dp ./community/geosite-all.dat ./publish
-          install -Dp ./community/geosite-all-lite.dat ./publish
-          install -Dp ./community/geosite.dat ./publish
-          install -Dp ./community/geosite-lite.dat ./publish
+          wget -P ./publish https://github.com/Misaka009982/clash-geoip/releases/download/latest/Country.mmdb
+          wget -P ./publish https://github.com/Misaka009982/clash-geoip/releases/download/latest/Country-lite.mmdb
+          install -Dp ./GeoIP.dat ./publish
+          install -Dp ./GeoIP-lite.dat ./publish
+          install -Dp ./community/GeoSite-all.dat ./publish
+          install -Dp ./community/GeoSite-all-lite.dat ./publish
+          install -Dp ./community/GeoSite.dat ./publish
+          install -Dp ./community/GeoSite-lite.dat ./publish
           cd ./publish || exit 1
 
       - name: Release and upload assets
