--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set variables
         run: |
           echo "RELEASE_NAME=Released on $(date +%Y%m%d%H%M)" >> $GITHUB_ENV
-          echo "ads=https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt" >> $GITHUB_ENV
+          echo "category-ads-all=https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt" >> $GITHUB_ENV
           echo "private1=https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/private" >> $GITHUB_ENV
           echo "private2=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list" >> $GITHUB_ENV
           echo "microsoft_cn=https://rules.kr328.app/microsoft@cn.yaml" >> $GITHUB_ENV
@@ -70,10 +70,10 @@ jobs:
         with:
           go-version: 'stable'
 
-      - name: Generate ads
+      - name: Generate category-ads-all
         run: |
           mkdir -p ./community/mydata ./tmp ./publish
-          curl -sSL ${ads} | grep -v '#' | sed '/^\s*$/d' > ./community/mydata/ads
+          curl -sSL ${category-ads-all} | grep -v '#' | sed '/^\s*$/d' > ./community/mydata/category-ads-all
 
       - name: Generate private
         run: |
@@ -175,13 +175,13 @@ jobs:
 
       - name: Generate GeoSite-all-lite.dat
         run: |
-          rm -f ./community/mydata/ads
+          rm -f ./community/mydata/category-ads-all
           cd ./community
           go run ./ --datapath=./mydata --outputname GeoSite-all-lite.dat
 
       - name: Generate GeoSite.dat
         run: |
-          curl -sSL ${ads} | grep -v '#' | sed '/^\s*$/d' > ./community/mydata/ads
+          curl -sSL ${category-ads-all} | grep -v '#' | sed '/^\s*$/d' > ./community/mydata/category-ads-all
           rm -f ./community/mydata/netflix \
                 ./community/mydata/disney \
                 ./community/mydata/max \
@@ -196,7 +196,7 @@ jobs:
 
       - name: Generate GeoSite-lite.dat
         run: |
-          rm -f ./community/mydata/ads
+          rm -f ./community/mydata/category-ads-all
           cd ./community
           go run ./ --datapath=./mydata --outputname GeoSite-lite.dat
 
