--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set variables
         run: |
           echo "RELEASE_NAME=Released on $(date +%Y%m%d%H%M)" >> $GITHUB_ENV
-          echo "category-ads-all=https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt" >> $GITHUB_ENV
+          echo "ads=https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt" >> $GITHUB_ENV
           echo "private1=https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/private" >> $GITHUB_ENV
           echo "private2=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list" >> $GITHUB_ENV
           echo "microsoft_cn=https://rules.kr328.app/microsoft@cn.yaml" >> $GITHUB_ENV
@@ -72,8 +72,9 @@ jobs:
 
       - name: Generate category-ads-all
         run: |
+          run: |
           mkdir -p ./community/mydata ./tmp ./publish
-          curl -sSL ${category-ads-all} | grep -v '#' | sed '/^\s*$/d' > ./community/mydata/category-ads-all
+          curl -sSL ${ads} | grep -v '#' | sed '/^\s*$/d' > ./community/mydata/category-ads-all
 
       - name: Generate private
         run: |
@@ -181,7 +182,7 @@ jobs:
 
       - name: Generate GeoSite.dat
         run: |
-          curl -sSL ${category-ads-all} | grep -v '#' | sed '/^\s*$/d' > ./community/mydata/category-ads-all
+          curl -sSL ${ads} | grep -v '#' | sed '/^\s*$/d' > ./community/mydata/category-ads-all
           rm -f ./community/mydata/netflix \
                 ./community/mydata/disney \
                 ./community/mydata/max \
