--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -20,7 +20,7 @@ jobs:
           echo "ads=https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-domains.txt" >> $GITHUB_ENV
           echo "private1=https://raw.githubusercontent.com/v2fly/domain-list-community/master/data/private" >> $GITHUB_ENV
           echo "private2=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list" >> $GITHUB_ENV
-          echo "microsoft_cn=https://raw.githubusercontent.com/DustinWin/ruleset_geodata/refs/heads/clash-ruleset/microsoft-cn.yaml" >> $GITHUB_ENV
+          echo "microsoft_cn=https://raw.githubusercontent.com/DustinWin/domain-list-custom/refs/heads/domains/microsoft-cn.list" >> $GITHUB_ENV
           echo "apple_cn=https://raw.githubusercontent.com/felixonmars/dnsmasq-china-list/master/apple.china.conf" >> $GITHUB_ENV
           echo "google_cn=https://raw.githubusercontent.com/felixonmars/dnsmasq-china-list/master/google.china.conf" >> $GITHUB_ENV
           echo "games_cn1=https://rules.kr328.app/category-games@cn.list" >> $GITHUB_ENV
