--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -23,7 +23,7 @@ jobs:
           echo "microsoft_cn=https://raw.githubusercontent.com/DustinWin/domain-list-custom/refs/heads/domains/microsoft-cn.list" >> $GITHUB_ENV
           echo "apple_cn=https://raw.githubusercontent.com/felixonmars/dnsmasq-china-list/master/apple.china.conf" >> $GITHUB_ENV
           echo "google_cn=https://raw.githubusercontent.com/felixonmars/dnsmasq-china-list/master/google.china.conf" >> $GITHUB_ENV
-          echo "games_cn1=https://rules.kr328.app/category-games@cn.list" >> $GITHUB_ENV
+          echo "games_cn1=https://rules.kr328.app/category-games@cn.yaml" >> $GITHUB_ENV
           echo "games_cn2=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.list" >> $GITHUB_ENV
           echo "netflix=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list" >> $GITHUB_ENV
           echo "disney=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list" >> $GITHUB_ENV
@@ -205,6 +205,108 @@ jobs:
           rm -f ./community/mydata/category-ads-all
           cd ./community
           go run ./ --datapath=./mydata --outputname GeoSite-lite.dat
+
+      - name: Get GeoIP.dat relative files
+        run: |
+          wget https://github.com/Misaka009982/clash-geoip/raw/refs/heads/release/GeoIP.dat
+          wget https://github.com/Misaka009982/clash-geoip/raw/refs/heads/release/GeoIP-lite.dat
+
+      - name: Generate fake-ip-user.yaml
+        env:
+          SED: sed 's/^/    - /g' | sed '/^\s*$/d'
+        run: |
+          cat <<EOF > ./publish/fake-ip-user.yaml
+          mode: rule
+          log-level: silent
+          allow-lan: true
+          unified-delay: false
+          tcp-concurrent: true
+          external-controller-tls: 0.0.0.0:9090
+          global-client-fingerprint: chrome
+          profile: {store-selected: true, store-fake-ip: true}
+
+          geodata-mode: true
+          geox-url:
+            geosite: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/GeoSite-lite.dat"
+            geoip: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/GeoIP-lite.dat"
+            mmdb: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/Country-lite.mmdb"
+
+          dns:
+            enable: true
+            prefer-h3: true
+            ipv6: true
+            listen: 0.0.0.0:1053
+            use-hosts: true
+            fake-ip-range: 198.18.0.1/16
+            enhanced-mode: fake-ip
+            fake-ip-filter:
+          EOF
+          curl -sSL https://raw.githubusercontent.com/juewuy/ShellClash/master/public/fake_ip_filter.list | grep -v '#' | sed "s/.*/'&'/g" | ${{ env.SED }} >> ./publish/fake-ip-user.yaml
+          curl -sSL https://raw.githubusercontent.com/XIU2/TrackersListCollection/master/all.txt | grep 'udp:' | grep -i '\.[A-Z]' | sed "s/^.*\/\//'/g" | sed "s/:.*\/.*/'/g" | ${{ env.SED }} >> ./publish/fake-ip-user.yaml
+          cat <<EOF >> ./publish/fake-ip-user.yaml
+              - 'adguardteam.github.io'
+              - 'anti-ad.net'
+            default-nameserver:
+              - https://223.5.5.5/dns-query
+              - https://1.12.12.12/dns-query
+            nameserver:
+              - https://dns.alidns.com/dns-query
+              - https://doh.pub/dns-query
+          EOF
+
+      - name: Generate redir-host-user.yaml
+        run: |
+          cat <<EOF > ./publish/redir-host-user.yaml
+          mode: rule
+          log-level: silent
+          allow-lan: true
+          unified-delay: false
+          tcp-concurrent: true
+          external-controller-tls: 0.0.0.0:9090
+          global-client-fingerprint: chrome
+          profile: {store-selected: true, store-fake-ip: true}
+
+          geodata-mode: true
+          geox-url:
+            geosite: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/GeoSite-lite.dat"
+            geoip: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/GeoIP-lite.dat"
+            mmdb: "https://fastly.jsdelivr.net/gh/Misaka009982/clash-geosite@release/Country-lite.mmdb"
+
+          dns:
+            enable: true
+            prefer-h3: true
+            ipv6: true
+            listen: 0.0.0.0:1053
+            use-hosts: true
+            fake-ip-range: 198.18.0.1/16
+            enhanced-mode: fake-ip
+            fake-ip-filter: ['+.*']
+            default-nameserver:
+              - https://223.5.5.5/dns-query
+              - https://1.12.12.12/dns-query
+            nameserver:
+              - 'https://dns.google/dns-query#🪜 代理域名'
+              - https://cloudflare-dns.com/dns-query
+            proxy-server-nameserver:
+              - https://dns.alidns.com/dns-query
+              - https://doh.pub/dns-query
+            nameserver-policy:
+              'geosite:microsoft-cn,apple-cn,google-cn,games-cn': [https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
+              'geosite:cn,private': [https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
+          EOF
+          rm -rf ./tmp
+
+      - name: Move files
+        run: |
+          wget -P ./publish https://github.com/Misaka009982/clash-geoip/releases/download/latest/Country.mmdb
+          wget -P ./publish https://github.com/Misaka009982/clash-geoip/releases/download/latest/Country-lite.mmdb
+          install -Dp ./GeoIP.dat ./publish
+          install -Dp ./GeoIP-lite.dat ./publish
+          install -Dp ./community/GeoSite-all.dat ./publish
+          install -Dp ./community/GeoSite-all-lite.dat ./publish
+          install -Dp ./community/GeoSite.dat ./publish
+          install -Dp ./community/GeoSite-lite.dat ./publish
+          cd ./publish || exit 1
 
       - name: Release and upload assets
         uses: svenstaro/upload-release-action@v2
