--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -40,6 +40,7 @@ jobs:
           echo "proxy=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list" >> $GITHUB_ENV
           echo "cn=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list" >> $GITHUB_ENV
           echo "pikpak=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PikPak/PikPak.list" >> $GITHUB_ENV
+          echo "fakeip-filter=https://raw.githubusercontent.com/DustinWin/ruleset_geodata/refs/heads/clash-ruleset/fakeip-filter.list" >> $GITHUB_ENV
         shell: bash
 
       - name: Checkout codebase
@@ -146,6 +147,10 @@ jobs:
       - name: Generate pikpak
         run: |
           curl -sSL ${pikpak} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/pikpak
+
+      - name: Generate fakeip-filter
+        run: |
+          curl -sSL ${fakeip-filter} | grep -v '#' | grep 'DOMAIN' | sed 's/^DOMAIN,/full:/g' | sed 's/^DOMAIN-SUFFIX,//g' | sed 's/^DOMAIN-KEYWORD,/keyword:/g' | sed '/^\s*$/d' > ./community/mydata/fakeip-filter
 
       - name: Generate openai
         run: |
